self was missing in save_db arguments.

--- a/storefront_scraping.ipynb
+++ b/storefront_scraping.ipynb
@@ -174,7 +174,9 @@
     "                print(\"Batch {} of {} finished in {:.2f} seconds. All finished in {:.2f} seconds, {} indexes processed, {} updated!\".format(math.ceil(i/100),batches_total, elapsed_batch,elapsed_total, i+1, updated))\n",
     "                \n",
     "        return df\n",
-    "    def save_db(df):\n",
+    "    \n",
+    "    \n",
+    "    def save_db(self, df):\n",
     "        df.to_csv(\"dataframe_supplement.csv\", header=True)"
    ]
   },
